# cpm.dependencies

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  cpm.dependencies  secondfile.dependencies
